<resources>
    <string name="app_name">Quotes App</string>
    <string name="quote_content">A man is great by deeds, not by birth.</string>
    <string name="quote_author">Chanakya</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="share">Share</string>
    <string name="new_quote">New Quote</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="app_version">Version 1.0</string>
    <string name="creator">Sahil-4</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="receive_notifications">Receive Notifications</string>
    <string name="add">+</string>
    <string name="preferences">Preferences</string>
    <string name="time">08:00 AM</string>
    <string name="delete">delete</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
</resources>