<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    android:theme="@style/Theme.QuotesApp"
    tools:context=".MainActivity">

    <!--  Custom toolbar  -->
    <include
        android:id="@+id/toolbar"
        layout="@layout/customtoolbar"
        android:layout_width="0dp"
        android:layout_height="54dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--  Quote Section  -->
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="6dp"
        android:background="@drawable/border"
        android:foregroundGravity="center_vertical"
        android:orientation="vertical"
        android:padding="6dp"
        android:scrollbarSize="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:foregroundGravity="center_vertical"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/quote_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:background="@color/card_background"
                android:gravity="center_horizontal"
                android:padding="12dp"
                android:text="@string/quote_content"
                android:textColor="@color/text_primary"
                android:textSize="26sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/quote_author"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="26dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:background="@color/card_background"
                android:gravity="end|bottom"
                android:text="@string/quote_author"
                android:textColor="@color/text_primary"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/quote_content" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <!--  Bottom Buttons  -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <Button
        android:id="@+id/share_button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:background="@color/card_background"
        android:text="@string/share"
        android:textColor="@color/text_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/refresh_button"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline1"
        app:layout_constraintVertical_bias="0.5" />

    <ImageButton
        android:id="@+id/refresh_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="106dp"
        android:background="@color/card_background"
        android:contentDescription="@string/new_quote"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline1"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/baseline_refresh" />

</androidx.constraintlayout.widget.ConstraintLayout>